set(VTK_VMTK_RENDERING_TARGET_LINK_LIBRARIES )

set( VTK_VMTK_RENDERING_COMPONENTS
vtkCommonCore
vtkInteractionWidgets
vtkRendering${VMTK_RENDERING_BACKEND}
)
if (VTK_WRAP_PYTHON AND VTK_VMTK_WRAP_PYTHON)
list(APPEND VTK_VMTK_RENDERING_COMPONENTS
  vtkWrappingPythonCore
  )
endif(VTK_WRAP_PYTHON AND VTK_VMTK_WRAP_PYTHON)
find_package( VTK ${VTK_VERSION_MAJOR}.${VTK_VERSION_MINOR} COMPONENTS ${VTK_VMTK_RENDERING_COMPONENTS} REQUIRED )
include( ${VTK_USE_FILE} )
list( APPEND VTK_VMTK_RENDERING_TARGET_LINK_LIBRARIES ${VTK_LIBRARIES} )

SET (VTK_VMTK_RENDERING_SRCS
  vtkvmtkImagePlaneWidget.cxx
  vtkvmtkInteractorStyleTrackballCamera.cxx
  )

vmtk_build_library(
  NAME Rendering
  SRCS ${VTK_VMTK_RENDERING_SRCS}
  TARGET_LINK_LIBRARIES ${VTK_VMTK_RENDERING_TARGET_LINK_LIBRARIES}
  )
