add_subdirectory(Doxygen)
add_subdirectory(OpenNL)
#add_subdirectory(Stellar_1.0)
add_subdirectory(vtkvmtkITK)

if (DEFINED VMTK_BUILD_TETGEN)
  if (VMTK_BUILD_TETGEN AND VTK_VMTK_BUILD_TETGEN)
    add_subdirectory(tetgen1.4.3)
  endif ()
else () 
  if (VTK_VMTK_BUILD_TETGEN)
    add_subdirectory(tetgen1.4.3)
  endif ()
endif ()

