SET (OPENNL_SRCS
    nl_single_file.c
    )

INCLUDE_DIRECTORIES(${OPENNL_SOURCE_DIR})

ADD_LIBRARY (nl STATIC ${OPENNL_SRCS})

IF(NOT WIN32)
  SET_TARGET_PROPERTIES(nl PROPERTIES COMPILE_FLAGS -fPIC)
ENDIF(NOT WIN32)

INSTALL(TARGETS nl
  EXPORT VMTK-Targets
  LIBRARY DESTINATION ${VTK_VMTK_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
  ARCHIVE DESTINATION ${VTK_VMTK_INSTALL_LIB_DIR} COMPONENT Development
  RUNTIME DESTINATION ${VTK_VMTK_INSTALL_BIN_DIR} COMPONENT RuntimeExecutables
)

INSTALL(FILES nl.h
  DESTINATION ${VTK_VMTK_INSTALL_INCLUDE_DIR}
  COMPONENT Development)


