set (OPENNL_SRCS
    nl_single_file.c
    )

include_directories(${OPENNL_SOURCE_DIR})

add_library (nl STATIC ${OPENNL_SRCS})

if(NOT WIN32)
  set_target_properties(nl PROPERTIES COMPILE_FLAGS -fPIC)
endif()

install(TARGETS nl
  EXPORT VMTK-Targets
  LIBRARY DESTINATION ${VTK_VMTK_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
  ARCHIVE DESTINATION ${VTK_VMTK_INSTALL_LIB_DIR} COMPONENT Development
  RUNTIME DESTINATION ${VTK_VMTK_INSTALL_BIN_DIR} COMPONENT RuntimeExecutables
)

install(FILES nl.h
  DESTINATION ${VTK_VMTK_INSTALL_INCLUDE_DIR}
  COMPONENT Development)


