PROJECT (STELLAR)

SET (STARBASE_SRCS
    src/Starbase.c
)


SET (STELLAR_SRCS
    src/Stellar.c
)

INCLUDE_DIRECTORIES(${STELLAR_SOURCE_DIR}/src)

#ADD_DEFINITIONS(-DSTARLIBRARY)
ADD_DEFINITIONS(-DNOMAIN)

ADD_LIBRARY(starbase STATIC ${STARBASE_SRCS})
ADD_EXECUTABLE(Stellar ${STELLAR_SRCS})
TARGET_LINK_LIBRARIES(Stellar starbase m)

IF(NOT WIN32)
  SET_TARGET_PROPERTIES(starbase PROPERTIES COMPILE_FLAGS -fPIC)
  SET_TARGET_PROPERTIES(Stellar PROPERTIES COMPILE_FLAGS -fPIC)
ENDIF(NOT WIN32)

