PROJECT (TETGEN)

SET (TETGEN_SRCS
    tetgen.cxx
    predicates.cxx
    )

ADD_DEFINITIONS (-DTETLIBRARY)
INCLUDE_DIRECTORIES(${TETGEN_SOURCE_DIR})
ADD_LIBRARY (tet STATIC ${TETGEN_SRCS})

SET_TARGET_PROPERTIES(tet PROPERTIES COMPILE_FLAGS "-O0")

IF(NOT WIN32)
  SET_TARGET_PROPERTIES(tet PROPERTIES COMPILE_FLAGS "-O0 -fPIC")
ENDIF(NOT WIN32)

INSTALL(TARGETS tet DESTINATION ${VTK_VMTK_INSTALL_BIN_DIR} EXPORT VMTK-Targets)